<resources>
    <string name="app_name">TODOAPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email" >Enter your email</string>
    <string name="enter_your_pass" >Enter your password</string>
    <string name="re_enter_your_pass" >Retype your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already Registered</string>
    <string name="not_registered_yet">Not Registered yet</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">todo</string>
</resources>